...
      <Tabs.Screen
        name="discover"
        options={{ title: 'Discover' }}
      />
      <Tabs.Screen
        name="camera"
        options={{ title: 'Camera' }}
      />
      <Tabs.Screen
        name="inbox"
        options={{ title: 'Gasps' }}
      />
      <Tabs.Screen
...
